# defny-python-example

./: .gitignore  README.md  dfyconfig.toml  pyproject.toml
src/lorrel_py/: __init__.py  extension.dfy
tests/: test_dummy.py  test_lorrel_py
